# learn-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.adoc  Session.sh  rust-prototyping.adoc
container/: Containerfile  Containerignore  run.sh
control_flow/src/: lib.rs  main.rs
data_types/: README.adoc
data_types/src/: lib.rs  main.rs
functions/src/: lib.rs  main.rs
issue-11/: test-kv.sh
issue-11/src/: main.rs
issue-12/: Cargo.toml
issue-12/src/: lib.rs
issue-2/src/: main.rs
issue-3/src/: main.rs
issue-4/: test-lottery.sh
issue-6/: Cargo.toml
issue-7/: Cargo.toml
issue-8/: Cargo.toml
issue-8/src/: main.rs
issue-9/: Cargo.toml
ownership/src/: lib.rs  main.rs
practice_programs/fibonacci_generator/: Cargo.toml
practice_programs/fibonacci_generator/src/: main.rs
practice_programs/fizzbuzz/: README.adoc
practice_programs/fizzbuzz/src/: lib.rs
practice_programs/grrs/: Cargo.toml
practice_programs/grrs/src/: lib.rs  main.rs
practice_programs/grrs/tests/: cli.rs
practice_programs/guessing_game/src/: main.rs
practice_programs/leap_year/: Cargo.toml  README.adoc
practice_programs/leap_year/src/: as_function.rs  as_struct.rs  lib.rs
practice_programs/minigrep/src/: lib.rs  main.rs
practice_programs/mkcert/: Cargo.toml  README.adoc
practice_programs/mkcert/container/: Containerfile  Containerignore  build.sh  post-create.sh  run.sh
practice_programs/mkcert/src/: main.rs
practice_programs/mksshkey/: Cargo.toml
practice_programs/mksshkey/container/: Containerfile  build.sh  run.sh
practice_programs/mksshkey/src/: lib.rs  main.rs
practice_programs/temperature_converter/src/: main.rs
practice_programs/test_connection/: Cargo.toml
practice_programs/test_connection/.github/workflows/: build.yml
practice_programs/test_connection/src/: main.rs
practice_programs/twelve_days_of_christmas/: Cargo.toml
practice_programs/twelve_days_of_christmas/src/: main.rs
practice_programs/web_server/src/: lib.rs  main.rs
src/: main.rs
variables/src/: lib.rs  main.rs
web-apps/issue-10/: Cargo.toml  test-html.sh
web-apps/issue-10/src/: main.rs
web-apps/issue-12/: Cargo.toml
web-apps/issue-12/src/: state.rs
web-apps/issue-12/src/kv_store/: mod.rs
web-apps/issue-12/tests/: kv_store.rs
web-apps/issue-13/: Cargo.toml  test-app.sh
web-apps/issue-13/src/: app_error.rs  article.rs  article_repository.rs  lib.rs  main.rs
web-apps/issue-2/src/: main.rs
web-apps/issue-3/: test-sudoko-solver.sh
web-apps/issue-5/: Cargo.toml  test-process-image.sh
web-apps/issue-6/src/: main.rs
web-apps/issue-7/: test-crud.sh
web-apps/issue-8/: main.js
web-apps/issue-9/: test-validation.sh
web-apps/issue-9/src/: main.rs
web_apps/issue-10/static/css/: style.css
web_apps/issue-11/: Cargo.toml
web_apps/issue-12/src/: main.rs
web_apps/issue-13/: schema.sql
web_apps/issue-13/tests/: integration_tests.rs
web_apps/issue-2/: Cargo.toml
web_apps/issue-3/: Cargo.toml
web_apps/issue-4/: Cargo.toml
web_apps/issue-4/src/: main.rs
web_apps/issue-5/src/: main.rs
web_apps/issue-7/: schema.sql
web_apps/issue-7/src/: main.rs
web_apps/issue-8/: main.html
