[package]
name = "rust-launchpad-issue-6"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/rust-launchpad"
homepage = "https://github.com/andreaslongo/rust-launchpad"
description = ""

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
