[package]
name = "rust-launchpad-issue-8"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/rust-launchpad"
homepage = "https://github.com/andreaslongo/rust-launchpad"
description = ""

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

