[package]
name = "test_connection"
version = "0.1.0"
authors = ["Andreas Longo <contact@andreaslongo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
