[package]
name = "rust-launchpad-issue-11"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/rust-launchpad"
homepage = "https://github.com/andreaslongo/rust-launchpad"
description = ""

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bytes = "1.5.0"
image = "0.24.8"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
