[package]
name = "rust-launchpad"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/rust-launchpad"
homepage = "https://github.com/andreaslongo/rust-launchpad"
description = ""

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
xml = "0.8.10"
