[package]
name = "rust-launchpad-issue-4"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Longo <git@andreaslongo.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andreaslongo/rust-launchpad"
homepage = "https://github.com/andreaslongo/rust-launchpad"
description = ""

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.35.1", features = ["full"] }
